# sage

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: config.cmake
res/: config.h.in
sage/: CMakeLists.txt
sage/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
