#Auto Generated Root CMake file by Flick CLI
#Copyright(c) 2025 None.All rights reerved.
cmake_minimum_required(VERSION 3.6...3.31)
project(sage VERSION 0.1.0 LANGUAGES CXX)
include(cmake/config.cmake)
#@add_find_package Warning: Do not remove this line
find_package(fmt)
#@add_subproject Warning: Do not remove this line
add_subdirectory(sage)
